syntax = "proto3";

package dash.npu_ha_set;

import "types.proto";

enum Owner {
    OWNER_UNSPECIFIED = 0;
    OWNER_DPU = 1;
    OWNER_SWITCH = 2;
}

enum Scope {
    SCOPE_UNSPECIFIED = 0;
    SCOPE_DPU = 1;
    SCOPE_ENI = 2;
}

message HaSetConfig {
    string ha_set_id = 1 ;
    string version = 2;
    types.IpAddress vip_v4 = 3;
    types.IpAddress vip_v6 = 4;
    npu_ha_set.Owner owner = 5;
    npu_ha_set.Scope scope = 6;
    // IDs of vDPUs, value format should be /{/{vdpu_id1/},/{vdpu_id2/},.../}
    string vdpu_ids = 7;
    // Pinned probe states of vDPUs, connected by ",". Each state can be none, up or down.
    string pinned_vdpu_bfd_probe_states = 8;
    string preferred_vdpu_id = 9;
    uint32 preferred_standalone_vdpu_index = 10;
}

message HaSetConfigKey {
    string ha_set = 1;
}
